<resources>
    <string name="app_name">LIVE HEALTHY</string>
    <string name="other_lang">ع</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="doctors">doctors</string>
    <string name="labs">labs</string>
    <string name="pharmacies">pharmacy</string>
    <string name="radiology">radiology</string>
    <string name="search_by_name">search by name</string>
    <string name="specialty">specialty : </string>
    <string name="dr">Dr/</string>
    <string name="doctor_detail">Doctor detail</string>
    <string name="edit">edit</string>
    <string name="stop">stop</string>
    <string name="time_line">time line</string>
    <string name="doctor_name">doctor name</string>
    <string name="add_doctor">add doctor</string>
    <string name="address">address</string>
    <string name="phone_number">phone number</string>
    <string name="add_timeline">add timeline</string>
    <string name="day">day</string>
    <string name="clock">clock</string>
    <string name="network_error">network error</string>
    <string name="Empty_data">fill real data</string>
    <string name="fill_data">fill data</string>
    <string name="eng_language">ENG</string>
    <string name="no_data">No Data</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="doctor_deleted">Doctor stopped</string>
    <string name="edit_clinic">Edit clinic</string>
    <string name="empty_name">empty name</string>
    <string name="empty_feild">empty feild</string>
    <string name="clinic_name">clinic name</string>
    <string name="clinic_name_in_arabic">clinic name in arabic</string>
    <string name="address_in_arabic">address in arabic</string>
    <string name="mobile_number">mobile number</string>
    <string name="price">price</string>
    <string name="discount">discount</string>
    <string name="max_requests">max requests</string>
    <string name="schedule">schedule</string>
    <string name="add_schedule">add schedule</string>
    <string name="add">add</string>
    <string name="sunday">sunday</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="confirm">confirm</string>
    <string name="city">city</string>
    <string name="area">area</string>
    <string name="doctor_added">doctor added</string>
    <string name="gender">gender</string>
    <string name="consultant">consultant</string>
    <string name="name_in_arabic">name in arabic</string>
    <string name="tittle">tittle</string>
    <string name="tittle_in_arabic">tittle in arabic</string>
    <string name="speciality_edit">speciality</string>
    <string name="femal">female</string>
    <string name="male">male</string>
    <string name="location_permission">Location Permission Required</string>
    <string name="turn_gps">Turn Gps On?</string>
    <string name="location">location</string>
    <string name="doctor_updated">doctor updated</string>
    <string name="house_visit">house visit</string>
    <string name="nursery">Nursery</string>
    <string name="description_in_english">Description in english</string>
    <string name="description_in_arabic">Description in arabic</string>
    <string name="no_location">no location detected</string>
    <string name="social_media">social media</string>
    <string name="there_is_no_clinics">there is no clinics</string>
    <string name="no_schedule">no schedule</string>
    <string name="add_clinic">add clinic</string>
    <string name="request_saved">request saved</string>
    <string name="start">stopped</string>
    <string name="clinic_added">clinic added</string>
    <string name="clinic_updated">clinic updated</string>
    <string name="edit_doctor">edit doctor</string>
    <string name="clinics">clinics</string>
    <string name="save_and_add_clinic">save and add clinic</string>
    <string name="save_only">save only</string>
</resources>
