<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmedessam.livehealthysales.activities.AddDoctorActivity"
    android:orientation="vertical"
    android:background="@drawable/new_doctor_bg">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/add_doctor_toolbar"
        android:elevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/add_doctor"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/checked"
            android:id="@+id/save_icon"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:background="@android:color/transparent"
            />
        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nested_scroll"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="0"
            android:progressBackgroundTint="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimary"
            android:id="@+id/progress_bar"
            android:padding="4dp"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/doctor_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/white_edit_text"
            android:elevation="2dp"
            android:hint="@string/doctor_name"
            android:minHeight="40dp"
            android:padding="4dp"
            android:inputType="text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:nextFocusForward="@+id/doctor_name_ar_edit"
            />

        <EditText
            android:id="@+id/doctor_name_ar_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/name_in_arabic"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:minHeight="40dp"
            android:elevation="2dp"
            android:inputType="text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:nextFocusForward="@+id/speciality_spinner"
            />
        <EditText
            android:id="@+id/speciality_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:hint="@string/speciality_edit"
            android:paddingStart="4dp"
            android:minHeight="40dp"
            android:elevation="2dp"
            android:paddingLeft="4dp"
            android:gravity="start"
            android:drawableEnd="@drawable/down_arrow_copy"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/down_arrow_copy"
            android:editable="false"
            android:maxLines="1"
            android:nextFocusForward="@+id/gender"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/gender"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:minHeight="40dp"
            android:elevation="4dp"
            android:drawableEnd="@drawable/down_arrow_copy"
            android:drawablePadding="6dp"
            android:drawableRight="@drawable/down_arrow_copy"
            android:selectAllOnFocus="true"
            android:maxLines="1"
            android:nextFocusForward="@+id/house_visit"
            android:editable="false"
            />
        <EditText

            android:id="@+id/house_visit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/house_visit"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:minHeight="40dp"
            android:elevation="4dp"
            android:drawableEnd="@drawable/down_arrow_copy"
            android:drawablePadding="6dp"
            android:drawableRight="@drawable/down_arrow_copy"
            android:selectAllOnFocus="true"
            android:nextFocusForward="@+id/email"
            android:maxLines="1"
            android:editable="false"
            />
        </LinearLayout>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:minHeight="40dp"
            android:elevation="4dp"
            android:drawablePadding="4dp"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:nextFocusForward="@+id/consultant"
            android:maxLines="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/consultant"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_edit_text"
            android:drawableEnd="@drawable/down_arrow_copy"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/down_arrow_copy"
            android:elevation="4dp"
            android:hint="@string/consultant"
            android:minHeight="40dp"
            android:padding="4dp"
            android:nextFocusForward="@+id/nursing"
            android:maxLines="1"
            android:editable="false"
             />

            <EditText
                android:id="@+id/nursing"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_edit_text"
                android:drawableEnd="@drawable/down_arrow_copy"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/down_arrow_copy"
                android:elevation="4dp"
                android:hint="@string/nursery"
                android:minHeight="40dp"
                android:padding="4dp"
                android:maxLines="1"
                android:nextFocusForward="@+id/address_edit_text"
                android:editable="false"
                />
        </LinearLayout>

        <EditText

            android:id="@+id/phone_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_edit_text"
            android:elevation="4dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="40dp"
            android:nextFocusForward="@+id/social_media"
            android:padding="4dp"
            android:selectAllOnFocus="true" />

        <EditText
                android:id="@+id/address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_edit_text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/address"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:minHeight="40dp"
                android:inputType="text"
                android:elevation="4dp"
                android:drawablePadding="4dp"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:nextFocusForward="@+id/location_edit_text"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/location_edit_text"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:background="@drawable/white_edit_text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/location"
                android:padding="4dp"
                android:minHeight="40dp"
                android:inputType="text"
                android:elevation="4dp"
                android:drawablePadding="4dp"
                android:selectAllOnFocus="true"
                android:nextFocusForward="@+id/phone_number_edit_text"
                />
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:src="@drawable/gray_location"
            android:id="@+id/location_icon"
            />
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/location_progress"
                    android:visibility="gone"/>
            </FrameLayout>
        </LinearLayout>


        <EditText
            android:id="@+id/social_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/social_media"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:minHeight="40dp"
            android:elevation="4dp"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:nextFocusForward="@+id/english_description"
            android:maxLines="1"
            />

        <EditText

            android:id="@+id/english_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/description_in_english"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:minHeight="40dp"
            android:elevation="4dp"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:nextFocusForward="@+id/arabic_description"
            />
        <EditText

            android:id="@+id/arabic_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/description_in_arabic"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:minHeight="40dp"
            android:elevation="4dp"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:nextFocusForward="@+id/tittle"
            />
        <EditText

            android:id="@+id/tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/tittle"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:minHeight="40dp"
            android:elevation="4dp"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:nextFocusForward="@+id/tittle_ar"
            />
        <EditText

            android:id="@+id/tittle_ar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/tittle_in_arabic"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:minHeight="40dp"
            android:elevation="4dp"
            android:inputType="text"
            android:selectAllOnFocus="true"
            />


    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>

