<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/langButton"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_lang"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="130dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_only"
                android:paddingTop="15dp"/>
        </FrameLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/email"
            android:gravity="start"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/textColorDark"
            android:textColorHint="@color/textColor"
            android:textColorHighlight="@color/colorPrimary"

            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/textColorDark"
            android:textColorHint="@color/textColor"
            />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="0"
            android:progressBackgroundTint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/login_progress_bar"
            android:padding="4dp"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/edit_button_background"
            android:paddingLeft="56dp"
            android:paddingRight="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:elevation="4dp"/>

        </LinearLayout>




</android.support.v4.widget.NestedScrollView>
